# Movement-Analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/results/: all_metrics.csv  bootstrap_results.csv  control_results.json  mean_comparison.csv  permutation_tests.csv  runway_results.json  variance_study_report.txt  variance_tests.csv
docs/papers/: variance_study.md
research/: kinematics_research.md  movement_quality_score.md
scripts/: generate_gifs.py  variance_study.py
src/movement_analytics/: __init__.py  __main__.py  cli.py
src/movement_analytics/generators/: gait_model.py  stick_figure.py
src/movement_analytics/kinematics/: gait_metrics.py  joint_angles.py
src/movement_analytics/pose/: estimator.py
src/movement_analytics/visualization/: dashboard.py
tests/: test_pipeline.py
